# aspg

./: .env  .env.example  README.md  docker-compose.yml
aspg/backend/: main.py
aspg/backend/app/api/: deps.py
aspg/backend/app/core/: config.py
backend/: Dockerfile  pyproject.toml  test_env.py
backend/app/: crud.py  main.py  models.py
backend/app/api/: deps.py
backend/app/api/routes/: dashboard.py  despesas.py  login.py  receitas.py  users.py
backend/app/core/: config.py  db.py  security.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/components/: Header.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/routes/: home.tsx  login.tsx
frontend/src/services/: api.ts  apiClient.ts
