[tool.poetry]
name = "aspg"
version = "0.1.0"
description = "Projeto de Assessoria de Planejamento e Gestão para controle orçamentário"
authors = ["ieplif <fszribeiro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
sqlmodel = "^0.0.18"
psycopg2-binary = "^2.9.9"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
